objects/Docusign_Status__c.object
<CustomObject>
    <description>Copy of Docusign__Docusign_Status__c object from PSG Salesforce Org</description>
    <fields>
        <fullName>Case__c</fullName>
        <description>Lookup to Case Object</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Docusign Status</relationshipLabel>
        <relationshipName>Docusign_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Lookup to Account.  Named company to match schema in PSG.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Docusign Status</relationshipLabel>
        <relationshipName>Docusign_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Age__c</fullName>
        <description>From PSG Org</description>
        <label>Completed Age</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_Date_Time__c</fullName>
        <description>Date/TIme from PSG Org</description>
        <label>Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Checklist__c</fullName>
        <description>Lookup to Contract Checklist in GSO.  Comes from PSG Org</description>
        <label>Contract</label>
        <referenceTo>Contract_Checklist__c</referenceTo>
        <relationshipLabel>Docusign Status</relationshipLabel>
        <relationshipName>Docusign_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_To_Complete__c</fullName>
        <description>From PSG Org</description>
        <label>Days To Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declined_Date_Time__c</fullName>
        <description>From PSG Org</description>
        <label>Declined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Declined_Reason__c</fullName>
        <description>From PSG Org</description>
        <label>Declined Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Docusign_Envelope_ID__c</fullName>
        <description>From PSG Org</description>
        <label>Docusign Envelope ID</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envelope_Link__c</fullName>
        <description>From PSG Org</description>
        <label>Envelope Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Envelope_Status__c</fullName>
        <description>From PSG Org</description>
        <label>Envelope Status</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Id of record from PSG Org</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hours_Sent_to_Sign__c</fullName>
        <description>From PSG</description>
        <label>Hours Sent to Sign</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_to_Complete__c</fullName>
        <description>From PSG</description>
        <label>Hours to Complete</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes_to_Complete__c</fullName>
        <description>From PSG</description>
        <label>Minutes to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Completed__c</fullName>
        <description>From PSG</description>
        <label>Number Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSG_Envelope_Number__c</fullName>
        <description>Envelope number from Docusign__Docusign_Status__c object</description>
        <label>PSG Envelope Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Email__c</fullName>
        <description>From PSG</description>
        <label>Sender Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <description>From PSG</description>
        <label>Sender</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Age__c</fullName>
        <description>From PSG</description>
        <label>Sent Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_Date_Time__c</fullName>
        <description>From PSG</description>
        <label>Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>From PSG</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_Complete__c</fullName>
        <description>From PSG</description>
        <label>Time to Complete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewed_Date_Time__c</fullName>
        <description>From PSG</description>
        <label>Last Viewed</label>
        <type>DateTime</type>
    </fields>
    <label>Docusign Status</label>
    <nameField>
        <displayFormat>DOC-{0000000}</displayFormat>
        <label>Docusign Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docusign Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>